Fix image resizing on mobile, I hope

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1, h2, h3 {
     text-align: center;
 }
 
-img { width: 100%; }
+img { max-width: 100%; }
 
 #logo {
     width: 400px;
